# graduate_work

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: linters.yaml
auth_service/: .env.example  Makefile  README.md  docker-compose.dev.yaml  docker-compose.yaml  docker-entrypoint.sh  endpoints.md  pyproject.toml  requirements.txt
auth_service/docker/: Dockerfile
auth_service/migrations/: env.py
auth_service/migrations/versions/: 133c4378762d_add_social_accounts_table.py  161e13659ee1_role_permisions.py  f820c257ab1d_init.py
auth_service/nginx/: nginx.conf
auth_service/nginx/configs/: site.conf
auth_service/src/: main.py
auth_service/src/api/v1/auth/: router.py  schemas.py
auth_service/src/api/v1/role/: roles.py  schemas.py  user_roles.py
auth_service/src/core/: config.py
auth_service/src/db/: postgres.py
auth_service/src/db/cache/: abstract_cache.py  redis_cache.py
auth_service/src/exceptions/: exceptions.py
auth_service/src/mock_data/: create_user.py  data.py
auth_service/src/models/: base.py  role.py  user.py  utils.py
auth_service/src/scripts/: create_super_user.py
auth_service/src/services/: auth_service.py  base_oauth_service.py  providers_oauth_services.py  role_service.py  token_utils.py  user_roles_service.py  user_service.py  utils.py
auth_service/src/tests/: conftest.py  settings.py  utils.py
auth_service/src/tests/fixtures/: clients.py  sessions.py  users.py
auth_service/src/tests/unit_tests/: test_auth_endpoints.py
docker/: Dockerfile  Dockerfile.test  docker-entrypoint.sh
frontend/app/: package-lock.json  package.json
frontend/app/src/: App.css  App.js  index.js
frontend/app/src/CreateSessionPage/: CreateSessionPage.js
frontend/app/src/HomePage/: HomePage.css  HomePage.js
frontend/app/src/LoginPage/: LoginPage.css  LoginPage.js
frontend/app/src/SessionPage/: SessionPage.js
frontend/app/src/header/: Header.css  Header.js
tests/: conftest.py  settings.py
tests/fixtures/: clients.py
tests/test_integration/: test_api.py  test_session_storage.py  test_websoket.py
tests/utils/: users.py
watch_together/app/: config.py  log_conf.yaml  main.py
watch_together/app/db/: mongo.py  provider.py
watch_together/app/models/: __init__.py  sessions.py
watch_together/app/services/: sessions.py  state_handle.py  websocket.py
watch_together/app/utils/: auth_util.py
(+14 files in other folders)
