[tool.poetry]
name = "watch_together"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.1"
pydantic = "^2.6.0"
pydantic-settings = "^2.1.0"
uvicorn = "^0.27.0.post1"
pyyaml = "^6.0.1"
python-json-logger = "^2.0.7"
orjson = "^3.9.14"
jinja2 = "^3.1.3"
websockets = "^12.0"
httpx = "^0.26.0"
redis = "^5.0.2"
motor = "^3.3.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.1"
pytest-asyncio = "^0.23.5"
httpx-ws = "^0.5.1"
wsproto = "^1.2.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.2.0"
isort = "^5.13.2"
flake8-pyproject = "^1.2.3"


[tool.black]
line-length = 120
target-version = ["py311"]
include = "\\.pyi?$"
exclude = "(\\.eggs|\\.git|\\.mypy_cache|\\.tox|\\.venv|_build|buck-out|build|dist)"


[tool.flake8]
max-line-length = 120
max-doc-length = 120

inline-quotes = "double"
multiline-quotes = "double"
docstring-quotes = "double"

per-file-ignores = [
# F401 imported but unused
# WPS410 Found wrong metadata variable: __all__
  "__init__.py:F401,WPS410",
]